# ai-revenue-os

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MANIFESTO.md  PRIVACY.md  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  conftest.py  experiment_ledger.jsonl  genome_library.jsonl  hypothesis.yaml  pyproject.toml
.agents/: hooks.json  mcp_config.json
config/: experiment_profile.yaml  feature_flags.json
docs/: apollo_11_test_protocol.md  architecture_map.md  overview.md  project_investigation.md  roadmap.md
migrations/: 001_initial.sql  002_run_ledger.sql  003_provider_events.sql  004_decisions_ledger.sql  005_system_state.sql  006_add_variant_desc.sql  007_update_metrics_schema.sql
scripts/: debug_board_creation.py  debug_publish_success.py  debug_screenshot.py  find_dropdown_element.py  find_publish_element.py  generate_nvidia_image.py  import_user_cookies.py  migrate.py  publish_real_test_pin.py  publish_real_test_pin_final.py  run_chaos_test.py  run_dashboard.py  run_e2e_evidence.py  run_e2e_real.py  run_exp_001a5_mpt_audit.py  run_exp_001a6_synthetic_replay.py  run_exp_001a7_blind_tournament.py  run_exp_001a8_factory_stress.py  run_exp_001a9_burn_in.py  run_exp_001a_shadow.py  run_exp_001b0_canary.py  run_exp_001b_live.py  run_golden_regression.py  run_metrics_sync.py  run_mlflow.py  run_oq_functional.py  run_oq_performance.py  run_pinterest_op.py  run_readiness_check.py  run_recovery_test.py  run_storage_maintenance.py  runner.py  setup_media_tools.ps1  setup_session.py  test_close_modal.py  test_create_board.py  (+2 more)
(+485 files in other folders)
